# hora-finance

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/skills/: SKILLS_STANDARD.md
.github/skills/google-sheets-reporting/: SKILL.md
.github/skills/repo-local-github-auth/: SKILL.md
.github/skills/repo-map/: SKILL.md
.github/skills/session-handoff/: SKILL.md
.github/skills/task-start-rules/: SKILL.md
docs/: agent-resume.md
scripts/: gh-aarshps
src/hora_finance/: __init__.py  __main__.py  app.py  config.py  google_auth.py  reporting.py  sheets.py  storage.py
